All_Component_DX/force-app/main/default/objects/Service_Request__c/Service_Request__c.object-meta.xml
<CustomObject>
    <description>This object can be used to store service request data from 3rd party CRM systems</description>
    <label>Service Request</label>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>