All_Component_DX/force-app/main/default/objects/Service_Request__c/fields/Closed_On__c.field-meta.xml
<CustomField>
    <fullName>Closed_On__c</fullName>
    <description>Closed Date and Time</description>
    <label>Closed On</label>
    <type>DateTime</type>
</CustomField>