All_Component_DX/force-app/main/default/objects/Service_Request__c/fields/ERP_External_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_External_ID__c</fullName>
    <description>External Id for Service Request in other system</description>
    <externalId>true</externalId>
    <label>ERP External ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>