All_Component_DX/force-app/main/default/objects/Service_Request__c/fields/Preferred_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Start_Time__c</fullName>
    <description>Appointment requested start date and time</description>
    <label>Preferred Start Time</label>
    <type>DateTime</type>
</CustomField>