All_Component_DX/force-app/main/default/objects/Service_Request__c/fields/Service_Request_Source__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Source__c</fullName>
    <description>Origin of the Service Request</description>
    <label>Service Request Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>